home page created using html

--- a/index.html
+++ b/index.html
@@ -1,10 +1,52 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
 <head>
-   
     <title>Home page</title>
+    <link rel="stylesheet" href="./css/index.css">
+
 </head>
+
 <body>
-    
+    <div class="container">
+        <div class="book-store-name">
+            <img src="./images/icons8-books-50.png" class="book-img"> Goodreads
+        </div>
+        <div class="body-container">
+            <div class="left-container">
+                <div class="left-body">
+                    <img src="./images/books.PNG" class="books">
+                </div>
+            </div>
+            <div class="center-body">
+                <h1>Our categories</h1>
+                <h2>Story</h2>
+                <h2>Poem</h2>
+                <h2>Horror</h2>
+                <h2>Historic</h2>
+                <h2></h2>
+            </div>
+            <div class="right-container">
+                <div class="right-body">
+                    <img src="./images/books.PNG" class="books">
+                </div>
+            </div>          
+        </div>
+        <div class="footer">
+            <div class="address">
+                   <h1>We are available</h1>
+                   Address : At .Kundewadi Tal - Sinnar Dist-Nasik
+            </div>
+            <div class="about-us">
+                   About us : We are available to provide you different types of books at our shop. Make a visit!!!!
+
+            </div>
+            <div class="socia-media">
+
+            </div>
+        </div>
+    </div>
+
 </body>
+
 </html>
