footer information added

--- a/index.html
+++ b/index.html
@@ -35,13 +35,17 @@
         <div class="footer">
             <div class="address">
                    <h1>We are available</h1>
-                   Address : At .Kundewadi Tal - Sinnar Dist-Nasik
+                   Address :<br> At .Kundewadi Tal - Sinnar Dist-Nasik<br><br>
             </div>
             <div class="about-us">
-                   About us : We are available to provide you different types of books at our shop. Make a visit!!!!
-
+                   About us :<br> We are available to provide you different types of books at our shop. Make a visit!!!!
+                   <br><br>
             </div>
-            <div class="socia-media">
+            <div class="social-media">
+                  Reach us :<br>
+                  <img src="./images/icons8-call-64.png" class="icon">9876543210<br>
+                  <img src="./images/icons8-whatsapp-48.png"class="icon">9876543210<br>
+                  <img src="./images/icons8-insta-16.png"class="icon">goodreads_book
 
             </div>
         </div>
