--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
             </div>
             <div class="center-body">
                 <h1>Our categories</h1>
-                <h2>Story</h2>
+                <a href="././pages/story.html"><h2>Story</h2></a>
                 <h2>Poem</h2>
                 <h2>Horror</h2>
                 <h2>Historic</h2>
-                <h2></h2>
+                <h2>Fairy tales</h2>
             </div>
             <div class="right-container">
                 <div class="right-body">
