--- a/pages/story.html
+++ b/pages/story.html
@@ -2,8 +2,14 @@
 <html>
 <head>
     <title>Story books</title>
+    <link rel="stylesheet" href="./../css/story.css">
 </head>
 <body>
+    <div class="container">
+        <div class="book-store-name">
+            <img src="./../images/icons8-books-50.png" class="book-img"> Goodreads
+        </div>
+    </div>
     
 </body>
 </html>
