The Mythology Collection book added

--- a/pages/story.html
+++ b/pages/story.html
@@ -10,6 +10,18 @@
             <img src="./../images/icons8-books-50.png" class="book-img"> Goodreads
         </div>
     </div>
-    
+    <div class="heading">
+        Books Of story
+    </div>
+    <div class="cards-container">
+        <div class="card">
+            <img src="./../images/story-book1.PNG" class="card-img">
+            <h3>The Mythology Collection</h3>
+            <h4>by Anant Pai </h4>
+            <h5>1 January 2010</h5>
+            <h6>₹5,336 M.R.P: ₹7,299 (27% off)</h6>
+            <button class="btn">Buy Now</button>
+        </div>
+    </div>
 </body>
 </html>
