Pandit Vishnu Sharma's Panchatantra book added

--- a/pages/story.html
+++ b/pages/story.html
@@ -22,6 +22,14 @@
             <h6>₹5,336 M.R.P: ₹7,299 (27% off)</h6>
             <button class="btn">Buy Now</button>
         </div>
+        <div class="card">
+            <img src="./../images/story-book2.PNG" class="card-img">
+            <h3> Pandit Vishnu Sharma's Panchatantra</h3>
+            <h4>by Shubha Vilas </h4>
+            <h5>14 February 2020</h5>
+            <h6>₹749 M.R.P: ₹1,099 (32% off)</h6>
+            <button class="btn">Buy Now</button>
+        </div>
     </div>
 </body>
 </html>
