The Magic of the Lost Temple book added

--- a/pages/story.html
+++ b/pages/story.html
@@ -30,6 +30,14 @@
             <h6>₹749 M.R.P: ₹1,099 (32% off)</h6>
             <button class="btn">Buy Now</button>
         </div>
+        <div class="card">
+            <img src="./../images/story-book3.PNG" class="card-img">
+            <h3> The Magic of the Lost Temple</h3>
+            <h4>by Sudha Murty </h4>
+            <h5>1 January 2015</h5>
+            <h6>₹198 M.R.P: ₹250 (21% off)</h6>
+            <button class="btn">Buy Now</button>
+        </div>
     </div>
 </body>
 </html>
