Ghosts of The Silent Hills book added

--- a/pages/story.html
+++ b/pages/story.html
@@ -38,6 +38,14 @@
             <h6>₹198 M.R.P: ₹250 (21% off)</h6>
             <button class="btn">Buy Now</button>
         </div>
+        <div class="card">
+            <img src="./../images/story-book4.PNG" class="card-img">
+            <h3> Ghosts of The Silent Hills</h3>
+            <h4>by  Anita Krishan </h4>
+            <h5>1 December 2019</h5>
+            <h6>₹189 M.R.P: ₹249 (24% off)      </h6>
+            <button class="btn">Buy Now</button>
+        </div>
     </div>
 </body>
 </html>
