The Power of Your Subconscious Mind book added

--- a/pages/story.html
+++ b/pages/story.html
@@ -46,6 +46,14 @@
             <h6>₹189 M.R.P: ₹249 (24% off)      </h6>
             <button class="btn">Buy Now</button>
         </div>
+        <div class="card">
+            <img src="./../images/story-book5.PNG" class="card-img">
+            <h3> The Power of Your Subconscious Mind</h3>
+            <h4>by  Joseph Murphy  </h4>
+            <h5>20 January 2018</h5>
+            <h6>₹115 M.R.P: ₹199 (42% off)     </h6>
+            <button class="btn">Buy Now</button>
+        </div>
     </div>
 </body>
 </html>
