--- a/pages/story.html
+++ b/pages/story.html
@@ -11,7 +11,7 @@
         </div>
     </div>
     <div class="heading">
-        Books Of story
+      Books Of story
     </div>
     <div class="cards-container">
         <div class="card">
@@ -55,5 +55,6 @@
             <button class="btn">Buy Now</button>
         </div>
     </div>
+    <center><a href="./../index.html"><img src="./../images/icons8-home-50 (1).png">
 </body>
 </html>
