link poem boook page to home page

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div class="center-body">
                 <h1>Our categories</h1>
                 <a href="././pages/story.html"><h2>Story</h2></a>
-                <h2>Poem</h2>
+                <a href="././pages/poem.html"><h2>Poem</h2></a>
                 <h2>Horror</h2>
                 <h2>Historic</h2>
                 <h2>Fairy tales</h2>
