--- a/pages/poem.html
+++ b/pages/poem.html
@@ -13,5 +13,15 @@
     <div class="heading">
         Books Of Poem
       </div>
+      <div class="cards-container">
+        <div class="card">
+            <img src="./../images/poem-book1.PNG" class="card-img">
+            <h3>100 Selected Poems</h3>
+            <h4>by William Wordsworth  </h4>
+            <h5> 5 March 2018</h5>
+            <h6>₹339 M.R.P: ₹499 (32% off)</h6>
+            <button class="btn">Buy Now</button>
+        </div>
+        </div>
 </body>
 </html>
