--- a/pages/poem.html
+++ b/pages/poem.html
@@ -22,6 +22,14 @@
             <h6>₹339 M.R.P: ₹499 (32% off)</h6>
             <button class="btn">Buy Now</button>
         </div>
+        <div class="card">
+            <img src="./../images/poem-book1.PNG" class="card-img">
+            <h3>Leaves of Grass</h3>
+            <h4>by Walt Whitman   </h4>
+            <h5> 1 February 2017</h5>
+            <h6>₹249M.R.P: ₹499 (32% off)</h6>
+            <button class="btn">Buy Now</button>
+        </div>
         </div>
 </body>
 </html>
