Little Book of Comfort book added

--- a/pages/poem.html
+++ b/pages/poem.html
@@ -30,6 +30,14 @@
             <h6>₹249M.R.P: ₹499 (32% off)</h6>
             <button class="btn">Buy Now</button>
         </div>
+        <div class="card">
+            <img src="./../images/poem-book3.PNG" class="card-img">
+            <h3>Little Book of Comfort</h3>
+            <h4>by Bond Ruskin  </h4>
+            <h5> 28 January 2019</h5>
+            <h6>₹237  M.R.P: ₹250 (5% off)</h6>
+            <button class="btn">Buy Now</button>
+        </div>
         </div>
 </body>
 </html>
