--- a/pages/poem.html
+++ b/pages/poem.html
@@ -38,6 +38,15 @@
             <h6>₹237  M.R.P: ₹250 (5% off)</h6>
             <button class="btn">Buy Now</button>
         </div>
+        <div class="card">
+            <img src="./../images/poem-book4.PNG" class="card-img">
+            <h3>100 selected poems</h3>
+            <h4>by  Emily Dickinson    </h4>
+            <h5> 1 December 2019</h5>
+            <h6>₹249  M.R.P: ₹349 (29% off)</h6>
+            <button class="btn">Buy Now</button>
+        </div>
+
         </div>
 </body>
 </html>
