--- a/pages/poem.html
+++ b/pages/poem.html
@@ -46,6 +46,14 @@
             <h6>₹249  M.R.P: ₹349 (29% off)</h6>
             <button class="btn">Buy Now</button>
         </div>
+        <div class="card">
+            <img src="./../images/poem-book5.PNG" class="card-img">
+            <h3>50 World’s Greatest Poems</h3>
+            <h4>by  various(authors)    </h4>
+            <h5> 1 August 2018<h5>
+            <h6>₹149 M.R.P: ₹199 (25% off)</h6>
+            <button class="btn">Buy Now</button>
+        </div>
 
         </div>
 </body>
