The Canterville Ghost [Paperback] Oscar Wilde book added

--- a/pages/horror.html
+++ b/pages/horror.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>Horror books</title>
-    <link rel="stylesheet" href="./css/index.css">
+    <link rel="stylesheet" href="./../css/horror.css">
 
 </head>
 
@@ -12,6 +12,19 @@
         <div class="book-store-name">
             <img src="./images/icons8-books-50.png" class="book-img"> Goodreads
         </div>
-        </div>
+        <div class="heading">
+            Books Of Horror
+          </div>
+          <div class="cards-container">
+            <div class="card">
+                <img src="./../images/horror-book1.PNG" class="card-img">
+                <h3>The Canterville Ghost [Paperback] Oscar Wilde</h3>
+                <h4>by Oscar Wilde   </h4>
+                <h5> 1 February 2021</h5>
+                <h6>₹119 M.R.P: ₹129 (8% off)</h6>
+                <button class="btn">Buy Now</button>
+            </div>
+    </div>
+
 </body>
 </html>
