Ghosts in the Dark Silence [Paperback] Krishan, Anita book added

--- a/pages/horror.html
+++ b/pages/horror.html
@@ -5,6 +5,7 @@
     <title>Horror books</title>
     <link rel="stylesheet" href="./../css/horror.css">
 
+
 </head>
 
 <body>
@@ -22,6 +23,14 @@
                 <h4>by Oscar Wilde   </h4>
                 <h5> 1 February 2021</h5>
                 <h6>₹119 M.R.P: ₹129 (8% off)</h6>
+                <button class="btn">Buy Now</button>
+            </div>
+            <div class="card">
+                <img src="./../images/horror-book2.PNG" class="card-img">
+                <h3>Ghosts in the Dark Silence [Paperback] Krishan, Anita</h3>
+                <h4>by Anita Krishan    </h4>
+                <h5> 20 November 2022</h5>
+                <h6>₹229 M.R.P: ₹299 (23% off)</h6>
                 <button class="btn">Buy Now</button>
             </div>
     </div>
