That Night: Four Friends, Twenty Years, book added

--- a/pages/horror.html
+++ b/pages/horror.html
@@ -32,6 +32,22 @@
                 <h5> 20 November 2022</h5>
                 <h6>₹229 M.R.P: ₹299 (23% off)</h6>
                 <button class="btn">Buy Now</button>
+            </div> 
+            <div class="card">
+                <img src="./../images/horror-book3.PNG" class="card-img">
+                <h3>Ghosts of The Silent Hills</h3>
+                <h4>by Anita Krishan    </h4>
+                <h5> 1 December 2019    </h5>
+                <h6>₹189 M.R.P: ₹249 (24% off)</h6>
+                <button class="btn">Buy Now</button>
+            </div>
+            <div class="card">
+                <img src="./../images/zhorror-book4.PNG" class="card-img">
+                <h3>That Night: Four Friends, Twenty Years,</h3>
+                <h4>by Nidhi Upadhyay     </h4>
+                <h5>5 April 2021   </h5>
+                <h6>₹164 M.R.P: ₹250 (34% off)</h6>
+                <button class="btn">Buy Now</button>
             </div>
     </div>
 
