Dracula book added

--- a/pages/horror.html
+++ b/pages/horror.html
@@ -49,6 +49,14 @@
                 <h6>₹164 M.R.P: ₹250 (34% off)</h6>
                 <button class="btn">Buy Now</button>
             </div>
+            <div class="card">
+                <img src="./../images/horror-book5.PNG" class="card-img">
+                <h3>Dracula </h3>
+                <h4>by Bram Stoker     </h4>
+                <h5>1 January 2022  </h5>
+                <h6>Total price:₹1,472.00</h6>
+                <button class="btn">Buy Now</button>
+            </div>
     </div>
 
 </body>
