--- a/pages/horror.html
+++ b/pages/horror.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container">
         <div class="book-store-name">
-            <img src="./images/icons8-books-50.png" class="book-img"> Goodreads
+            <img src="./../images/icons8-books-50.png" class="book-img"> Goodreads
         </div>
         <div class="heading">
             Books Of Horror
