--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
     <title>Home page</title>
@@ -22,7 +22,7 @@
                 <h1>Our categories</h1>
                 <a href="././pages/story.html"><h2>Story</h2></a>
                 <a href="././pages/poem.html"><h2>Poem</h2></a>
-                <h2>Horror</h2>
+                <a href="././pages/horror.html"><h2>Horror</h2></a>
                 <h2>Historic</h2>
                 <h2>Fairy tales</h2>
             </div>
